--- a/Portfolio/src/components/Menu/_menu.scss
+++ b/Portfolio/src/components/Menu/_menu.scss
@@ -90,15 +90,15 @@
 				mask-size: 100%;
 				-webkit-mask-position: center;
 				mask-position: center;
-				-webkit-mask-image: url(../../Assets/images/mask2.png);
-				mask-image: url(../../Assets/images/mask2.png);
+				-webkit-mask-image: url(../../assets/images/mask2.png);
+				mask-image: url(../../assets/images/mask2.png);
 
 				&:after {
 					content: '';
 					width: 100%;
 					height: 100%;
 					position: absolute;
-					background-image: url(../../Assets/images/dots.png);
+					background-image: url(../../assets/images/dots.png);
 					background-size: 65px;
 					left: 0;
 					opacity: 0.4;
@@ -118,8 +118,8 @@
 					mask-size: 100%;
 					-webkit-mask-position: center;
 					mask-position: center;
-					-webkit-mask-image: url(../../Assets/images/mask.png);
-					mask-image: url(../../Assets/images/mask.png);
+					-webkit-mask-image: url(../../assets/images/mask.png);
+					mask-image: url(../../assets/images/mask.png);
 				}
 
 				.menuList {
